Fix problem with content overflow in promo section

--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,7 @@ img {
 .promo-title {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+  max-width: 150px;
   margin: 0;
   font-weight: bold;
   font-size: 24px;
@@ -499,7 +500,7 @@ img {
   grid-row: 2 / 3;
   display: block;
   min-width: 135px;
-  padding: 10px 0;
+  padding: 10px;
   font-size: 14px;
   line-height: 18px;
   text-align: center;
@@ -524,7 +525,7 @@ img {
   grid-template-rows: 1fr min-content;
   padding: 20px 0 21px 22px;
   width: 300px;
-  height: 123px;
+  min-height: 123px;
 }
 
 .promo-item-materials {
@@ -629,20 +630,23 @@ img {
   grid-column: 1 / 3;
   grid-row: 2 / 4;
   position: relative;
+  min-height: 266px;
 }
 
 .promo-slide {
   display: none;
+  height: 100%;
+  padding: 23px 20px 27px 24px;
   background-color: var(--gray-400);
-  width: 620px;
-  height: 266px;
 }
 
 .promo-slide-current {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 .promo-slider-content {
+  height: 100%;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -651,20 +655,20 @@ img {
 .promo-slide-first {
   background-image: url(../img/slider-perforators.jpg);
   background-repeat: no-repeat;
-  background-position: 0 0;
+  background-position: center center;
+  background-size: cover;
 }
 
 .promo-slide-second {
   background-image: url(../img/slider-drills.jpg);
   background-repeat: no-repeat;
-  background-position: 0 0;
+  background-position: center center;
+  background-size: cover;
 }
 
 .promo-slide-title {
-  position: absolute;
-  top: 23px;
-  left: 24px;
   margin: 0;
+  margin-bottom: 5px;
   font-weight: bold;
   font-size: 36px;
   line-height: 36px;
@@ -672,16 +676,14 @@ img {
 }
 
 .promo-slide-text {
-  position: absolute;
-  top: 64px;
-  left: 24px;
   margin: 0;
+  margin-bottom: auto;
 }
 
 .promo-slide-button {
-  position: absolute;
-  left: 24px;
-  bottom: 27px;
+  display: block;
+  max-width: 192px;
+  margin-top: 113px;
 }
 
 .promo-slide-button:hover,
@@ -693,27 +695,26 @@ img {
   background-color: var(--red-300);
 }
 
-.promo-slider-button {
-  position: absolute;
-}
-
 .promo-slider-button-back {
-  left: 24px;
+  position: absolute;
   top: 50%;
-  transform: translateY(-28%);
+  left: 24px;
+  transform: translateY(-30%);
   padding: 0;
   width: 22px;
   height: 40px;
   background-image: url(../img/icon-left.svg);
   background-color: transparent;
+  background-repeat: no-repeat;
   border: none;
   cursor: pointer;
 }
 
 .promo-slider-button-forward {
-  right: 20px;
+  position: absolute;
   top: 50%;
-  transform: translateY(-28%);
+  right: 20px;
+  transform: translateY(-30%);
   padding: 0;
   width: 22px;
   height: 40px;
@@ -725,13 +726,10 @@ img {
 
 .promo-slider-pagination {
   position: absolute;
-  left: 50%;
   bottom: 36px;
+  left: 50%;
   transform: translateX(-50%);
-  max-width: 130px;
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
   row-gap: 5px;
 }
 
